syntax = "proto3";

package order;

option go_package = "grpc-ecommerce/pb";

service OrderService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderResponse);
    rpc UpdateOrder (UpdateOrderRequest) returns (OrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteResponse);
    rpc ListOrders (Empty) returns (stream OrderResponse);

}

message Empty {}

message CreateOrderRequest {
    string customer_name = 1;
}

message GetOrderRequest {
    string id = 1;
}

message UpdateOrderRequest {
    string id = 1;
    string status = 2;
}

message DeleteOrderRequest {
    string id = 1;
}

message OrderResponse {
    string id = 1;
    string customer_name = 2;
    string status = 3;
}

message DeleteResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string message = 1;
}
